--- a/lib/ripple/ui/plugins/camera/overlay.html
+++ b/lib/ripple/ui/plugins/camera/overlay.html
@@ -16,9 +16,10 @@
 <section id="camera-window" class="overlay">
     <section>
         <img id="camera-image"></img>
+        <video id="camera-video"></video>
     </section>
     <section>
-        <input id="picture-upload" type="file" accept="image/*" class="ui-button" style="display:none"></input>
+        <input id="file-upload" type="file" class="ui-button" style="display:none"></input>
         <input id="video-upload" type="file" accept="video/*" class="ui-button" style="display:none"></input>
         <input id="audio-upload" type="file" accept="audio/*" class="ui-button" style="display:none"></input>
         <button id="select-file" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">
