--- a/lib/ripple/ui/plugins/camera/overlay.html
+++ b/lib/ripple/ui/plugins/camera/overlay.html
@@ -14,19 +14,17 @@
  * limitations under the License.
 -->
 <section id="camera-window" class="overlay">
-    <section>
-        <img id="camera-image"></img>
-        <video id="camera-video"></video>
+    <section id="camera-result">
     </section>
     <section>
         <input id="file-upload" type="file" class="ui-button" style="display:none"></input>
         <input id="video-upload" type="file" accept="video/*" class="ui-button" style="display:none"></input>
         <input id="audio-upload" type="file" accept="audio/*" class="ui-button" style="display:none"></input>
         <button id="select-file" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">
-            <span class="ui-button-text">Select a Picture</span>
+            <span class="ui-button-text">Select a File</span>
         </button>
         <button id="take-file" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">
-            <span class="ui-button-text">Use Selected Picture</span>
+            <span class="ui-button-text">Use Selected File</span>
         </button>
     </section>
 </section>
