initial work on the filePicker overlay

--- a/client/ui/plugins/file/overlay.html
+++ b/client/ui/plugins/file/overlay.html
@@ -25,7 +25,17 @@
             <span class="ui-button-text">Save</span>
         </button>
     </section>
-    <section id="file-browser"></section>
-    <section id="file-options"></section>
+
+    <section id="file-browser">
+        <table id="file-list">
+        </table>
+    </section>
+
+    <section id="file-options">
+        <div id="file-search">Search</div>
+        <div id="file-grid-list">Grid</div>
+        <div
+    
+    </section>
 </section>
 
