updated UI for filePicker

--- a/lib/client/ui/plugins/file/overlay.html
+++ b/lib/client/ui/plugins/file/overlay.html
@@ -13,6 +13,43 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
+<style type="text/css" media="screen">
+    /* Container */
+    #file-window {
+        height: 100%;
+    }
+
+    /* Header */
+    #file-header {
+        height: 50px;
+        text-align: center;
+    }
+        #cancel-file {
+            float: left;
+        }
+        #save-file {
+            float: right;
+        }
+
+    /* File Browser window */
+    #file-browser {
+        margin: 50 0;
+        overflow: auto;
+        background-color: #ffff00;
+    }
+
+    /* Footer */
+    #file-options {
+        position: absolute;
+        bottom: 0px;
+        height: 40px;
+        width: 100%
+        text-align: center;
+    } 
+    #file-options div {
+        display: inline;
+    }
+</style>
 <section id="file-window" class="overlay">
     <section id="file-params">
     </section>
@@ -28,6 +65,21 @@
 
     <section id="file-browser">
         <table id="file-list">
+            <tr>
+                <td>test</td>
+            </tr>
+            <tr>
+                <td>test</td>
+            </tr>
+            <tr>
+                <td>test</td>
+            </tr>
+            <tr>
+                <td>test</td>
+            </tr>
+            <tr>
+                <td>test</td>
+            </tr>
         </table>
     </section>
 
